--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "newmovie-en",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://winnie0609.github.io/MovieApp",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/lab": "*",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
@@ -19,6 +21,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
